Sat Jul 14 11:08:28 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/json/ext/generator/generator.c (check_max_nesting): wrong
	  format specifier.  a patch from pegacorn <subscriber.jp AT gmail.com>.
	  [ruby-dev:31217]

Sat Jul 14 02:27:43 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (int_pow): overflow detection using FIT_SQRT_LONG().
	  [ruby-dev:31215]

Sat Jul 14 02:05:53 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* insns.def (opt_div): LONG2FIX() may not work for corner cases,
	  use LONG2NUM() instead.  [ruby-dev:31210]

Sat Jul 14 00:34:01 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (int_round): should not return false, but self.
	  [ruby-dev:31212]

Fri Jul 13 18:31:27 2007  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/intern.h: remove unused function declarations.

	* include/ruby/ruby.h: ditto.

Fri Jul 13 17:32:37 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* vm.c (vm_free): clear free'ed living_threads field.
	  [ruby-dev:31163]

	* insns.def (opt_succ): use cast to shut a warning up.

Fri Jul 13 16:10:00 2007  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb (URI::Generic#find_proxy): use ENV.to_hash to access
	  http_proxy environment variable to avoid case insensitive
	  environment search.

Fri Jul 13 15:02:15 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (CreateChild): enclose command line except for
	  command.com which can not handle quotes.  [ruby-talk:258939]

Fri Jul 13 11:33:09 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (range_max, range_min): return nil for empty set as well as
	  1.8 and Enumerable.  [ruby-dev:31198]

Fri Jul 13 11:28:37 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (bvar): semicolon was lost for ripper description.
	  [ruby-dev:31140]

Fri Jul 13 11:25:10 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (program, stmt, primary): reduced duplicated code.

	* parse.y (dsym): convert also literals containing NUL to